lab4 bonus skończone