@@ -3,7 +3,6 @@ package agh.ics.oop;
 import agh.ics.oop.model.*;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -12,11 +11,12 @@ class SimulationTest {
     @Test
     public void simulationInit(){
         //given
-        List<Vector2d> startingPositions = List.of(new Vector2d(0,0),new Vector2d(2,3));
         List<MoveDirection> moves = List.of();
-        WorldMap map = new RectangularMap(5,5);
+        WorldMap<Animal, Vector2d> map = new RectangularMap(5,5);
+        List<Animal> animals = List.of(new Animal(new Vector2d(0,0)),new Animal(new Vector2d(2,3)));
+
         //when
-        Simulation simulation = new Simulation(startingPositions,moves,map);
+        Simulation<Animal, Vector2d> simulation = new Simulation<>(animals,moves,map);
         //then
         assertEquals(2,simulation.getAnimalsList().size());
         assertEquals(new Vector2d(0,0),simulation.getAnimalsList().get(0).getPosition());
@@ -26,20 +26,20 @@ class SimulationTest {
     @Test
     public void simulationSingleAnimal(){
         //given
-        List<Vector2d> startingPositions = List.of(new Vector2d(2,2));
+        List<Animal> animals = List.of(new Animal(new Vector2d(2,2)));
         List<MoveDirection> moves = List.of(MoveDirection.FORWARD,MoveDirection.RIGHT,MoveDirection.BACKWARD);
-        WorldMap map = new RectangularMap(5,5);
+        WorldMap<Animal, Vector2d> map = new RectangularMap(5,5);
         //when
-        Simulation simulation = new Simulation(startingPositions,moves,map);
+        Simulation<Animal, Vector2d> simulation = new Simulation<>(animals,moves,map);
         simulation.run();
         //then
-        assertEquals(new Vector2d(1,3),simulation.getAnimalsList().get(0).getPosition());
+        assertEquals(new Vector2d(1,3),simulation.getAnimalsList().getFirst().getPosition());
     }
 
     @Test
     public void simulationMultiAnimal(){
         //given
-        List<Vector2d> startingPositions = List.of(new Vector2d(2,2),new Vector2d(3,4));
+        List<Animal> animals = List.of(new Animal(new Vector2d(2,2)),new Animal(new Vector2d(3,4)));
         List<MoveDirection> moves = List.of(
                 MoveDirection.FORWARD,
                 MoveDirection.BACKWARD,
@@ -51,9 +51,9 @@ class SimulationTest {
                 MoveDirection.RIGHT,
                 MoveDirection.FORWARD,
                 MoveDirection.FORWARD);
-        WorldMap map = new RectangularMap(5,5);
+        WorldMap<Animal, Vector2d> map = new RectangularMap(5,5);
         //when
-        Simulation simulation = new Simulation(startingPositions,moves,map);
+        Simulation<Animal, Vector2d> simulation = new Simulation<>(animals,moves,map);
         simulation.run();
         //then
         assertEquals(new Vector2d(2,2),simulation.getAnimalsList().get(0).getPosition());
